; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libthr/thread/extr_thr_suspend_np.c__pthread_suspend_np.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libthr/thread/extr_thr_suspend_np.c__pthread_suspend_np.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pthread = type { i32 }

@EDEADLK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_pthread_suspend_np(%struct.pthread* %0) #0 {
  %2 = alloca %struct.pthread*, align 8
  %3 = alloca %struct.pthread*, align 8
  %4 = alloca i32, align 4
  store %struct.pthread* %0, %struct.pthread** %2, align 8
  %5 = call %struct.pthread* (...) @_get_curthread()
  store %struct.pthread* %5, %struct.pthread** %3, align 8
  %6 = load %struct.pthread*, %struct.pthread** %2, align 8
  %7 = call %struct.pthread* (...) @_get_curthread()
  %8 = icmp eq %struct.pthread* %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @EDEADLK, align 4
  store i32 %10, i32* %4, align 4
  br label %30

11:                                               ; preds = %1
  %12 = load %struct.pthread*, %struct.pthread** %3, align 8
  %13 = load %struct.pthread*, %struct.pthread** %2, align 8
  %14 = call i32 @_thr_ref_add(%struct.pthread* %12, %struct.pthread* %13, i32 0)
  store i32 %14, i32* %4, align 4
  %15 = icmp eq i32 %14, 0
  br i1 %15, label %16, label %29

16:                                               ; preds = %11
  %17 = load %struct.pthread*, %struct.pthread** %3, align 8
  %18 = load %struct.pthread*, %struct.pthread** %2, align 8
  %19 = call i32 @THR_THREAD_LOCK(%struct.pthread* %17, %struct.pthread* %18)
  %20 = load %struct.pthread*, %struct.pthread** %3, align 8
  %21 = load %struct.pthread*, %struct.pthread** %2, align 8
  %22 = call i32 @suspend_common(%struct.pthread* %20, %struct.pthread* %21, i32 1)
  %23 = load %struct.pthread*, %struct.pthread** %3, align 8
  %24 = load %struct.pthread*, %struct.pthread** %2, align 8
  %25 = call i32 @THR_THREAD_UNLOCK(%struct.pthread* %23, %struct.pthread* %24)
  %26 = load %struct.pthread*, %struct.pthread** %3, align 8
  %27 = load %struct.pthread*, %struct.pthread** %2, align 8
  %28 = call i32 @_thr_ref_delete(%struct.pthread* %26, %struct.pthread* %27)
  br label %29

29:                                               ; preds = %16, %11
  br label %30

30:                                               ; preds = %29, %9
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local %struct.pthread* @_get_curthread(...) #1

declare dso_local i32 @_thr_ref_add(%struct.pthread*, %struct.pthread*, i32) #1

declare dso_local i32 @THR_THREAD_LOCK(%struct.pthread*, %struct.pthread*) #1

declare dso_local i32 @suspend_common(%struct.pthread*, %struct.pthread*, i32) #1

declare dso_local i32 @THR_THREAD_UNLOCK(%struct.pthread*, %struct.pthread*) #1

declare dso_local i32 @_thr_ref_delete(%struct.pthread*, %struct.pthread*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
